parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declarations local_declarations body DOT
Rule 2     declarations -> <empty>
Rule 3     declarations -> declarations VAR identList COLON type
Rule 4     identList -> ID
Rule 5     identList -> identList COMMA ID
Rule 6     type -> INT
Rule 7     type -> REAL
Rule 8     type -> STRI
Rule 9     local_declarations -> <empty>
Rule 10    local_declarations -> local_declarations local_declaration SEMICOLON
Rule 11    local_declaration -> subHead declarations body
Rule 12    subHead -> FUNC ID args RETURN type SEMICOLON
Rule 13    subHead -> PROC ID args SEMICOLON
Rule 14    args -> <empty>
Rule 15    args -> OPEN_PAREN paramList CLOSE_PAREN
Rule 16    paramList -> identList COLON type
Rule 17    paramList -> paramList SEMICOLON identList COLON type
Rule 18    body -> BEGIN optionalStatements END
Rule 19    bodyWBC -> BEGIN optionalStatementsWBC END
Rule 20    optionalStatements -> <empty>
Rule 21    optionalStatements -> statementList
Rule 22    optionalStatementsWBC -> <empty>
Rule 23    optionalStatementsWBC -> statementListWBC
Rule 24    statementList -> statement
Rule 25    statementList -> statementList SEMICOLON statement
Rule 26    statementListWBC -> statementWBC
Rule 27    statementListWBC -> statementListWBC SEMICOLON statementWBC
Rule 28    statement -> variable ASSIGN expression
Rule 29    statement -> PRINT OPEN_PAREN string CLOSE_PAREN
Rule 30    statement -> PRINT OPEN_PAREN ID CLOSE_PAREN
Rule 31    statement -> READ OPEN_PAREN string CLOSE_PAREN
Rule 32    statement -> ID OPEN_PAREN expressionListProc CLOSE_PAREN
Rule 33    statement -> body
Rule 34    statement -> IF expression THEN bodyWBC
Rule 35    statement -> WHILE expression DO statement
Rule 36    statementWBC -> statement
Rule 37    statementWBC -> brCon
Rule 38    brCon -> BREAK
Rule 39    brCon -> CONTINUE
Rule 40    string -> STRING STR STRING
Rule 41    variable -> ID
Rule 42    expressionListProc -> <empty>
Rule 43    expressionListProc -> expressionList
Rule 44    expressionList -> expression
Rule 45    expressionList -> expressionList COMMA expression
Rule 46    expression -> simpleExpression
Rule 47    expression -> simpleExpression COMPARE simpleExpression
Rule 48    expression -> simpleExpression EQUAL simpleExpression
Rule 49    expression -> simpleExpression AND simpleExpression
Rule 50    expression -> simpleExpression OR simpleExpression
Rule 51    simpleExpression -> term
Rule 52    simpleExpression -> sign term
Rule 53    simpleExpression -> simpleExpression PLUSMINUS term
Rule 54    term -> factor
Rule 55    term -> term MULTIPLE factor
Rule 56    term -> term DIV factor
Rule 57    term -> term MOD factor
Rule 58    term -> term DIVIDE factor
Rule 59    factor -> ID
Rule 60    factor -> ID OPEN_PAREN expressionList CLOSE_PAREN
Rule 61    factor -> INT_DIGIT
Rule 62    factor -> REAL_DIGIT
Rule 63    factor -> OPEN_PAREN expression CLOSE_PAREN
Rule 64    factor -> NOT factor
Rule 65    sign -> PLUSMINUS

Terminals, with rules where they appear

AND                  : 49
ASSIGN               : 28
BEGIN                : 18 19
BREAK                : 38
CLOSE_PAREN          : 15 29 30 31 32 60 63
COLON                : 3 16 17
COMMA                : 5 45
COMPARE              : 47
CONTINUE             : 39
DIV                  : 56
DIVIDE               : 58
DO                   : 35
DOT                  : 1
END                  : 18 19
EQUAL                : 48
FUNC                 : 12
ID                   : 1 4 5 12 13 30 32 41 59 60
IF                   : 34
INT                  : 6
INT_DIGIT            : 61
MOD                  : 57
MULTIPLE             : 55
NOT                  : 64
OPEN_PAREN           : 15 29 30 31 32 60 63
OR                   : 50
PLUSMINUS            : 53 65
PRINT                : 29 30
PROC                 : 13
PROGRAM              : 1
READ                 : 31
REAL                 : 7
REAL_DIGIT           : 62
RETURN               : 12
SEMICOLON            : 1 10 12 13 17 25 27
STR                  : 40
STRI                 : 8
STRING               : 40 40
THEN                 : 34
VAR                  : 3
WHILE                : 35
error                : 

Nonterminals, with rules where they appear

args                 : 12 13
body                 : 1 11 33
bodyWBC              : 34
brCon                : 37
declarations         : 1 3 11
expression           : 28 34 35 44 45 63
expressionList       : 43 45 60
expressionListProc   : 32
factor               : 54 55 56 57 58 64
identList            : 3 5 16 17
local_declaration    : 10
local_declarations   : 1 10
optionalStatements   : 18
optionalStatementsWBC : 19
paramList            : 15 17
program              : 0
sign                 : 52
simpleExpression     : 46 47 47 48 48 49 49 50 50 53
statement            : 24 25 35 36
statementList        : 21 25
statementListWBC     : 23 27
statementWBC         : 26 27
string               : 29 31
subHead              : 11
term                 : 51 52 53 55 56 57 58
type                 : 3 12 16 17
variable             : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declarations local_declarations body DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declarations local_declarations body DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declarations local_declarations body DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declarations local_declarations body DOT
    (2) declarations -> .
    (3) declarations -> . declarations VAR identList COLON type

    VAR             reduce using rule 2 (declarations -> .)
    BEGIN           reduce using rule 2 (declarations -> .)
    FUNC            reduce using rule 2 (declarations -> .)
    PROC            reduce using rule 2 (declarations -> .)

    declarations                   shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON declarations . local_declarations body DOT
    (3) declarations -> declarations . VAR identList COLON type
    (9) local_declarations -> .
    (10) local_declarations -> . local_declarations local_declaration SEMICOLON

    VAR             shift and go to state 7
    BEGIN           reduce using rule 9 (local_declarations -> .)
    FUNC            reduce using rule 9 (local_declarations -> .)
    PROC            reduce using rule 9 (local_declarations -> .)

    local_declarations             shift and go to state 6

state 6

    (1) program -> PROGRAM ID SEMICOLON declarations local_declarations . body DOT
    (10) local_declarations -> local_declarations . local_declaration SEMICOLON
    (18) body -> . BEGIN optionalStatements END
    (11) local_declaration -> . subHead declarations body
    (12) subHead -> . FUNC ID args RETURN type SEMICOLON
    (13) subHead -> . PROC ID args SEMICOLON

    BEGIN           shift and go to state 10
    FUNC            shift and go to state 12
    PROC            shift and go to state 13

    body                           shift and go to state 8
    local_declaration              shift and go to state 9
    subHead                        shift and go to state 11

state 7

    (3) declarations -> declarations VAR . identList COLON type
    (4) identList -> . ID
    (5) identList -> . identList COMMA ID

    ID              shift and go to state 15

    identList                      shift and go to state 14

state 8

    (1) program -> PROGRAM ID SEMICOLON declarations local_declarations body . DOT

    DOT             shift and go to state 16


state 9

    (10) local_declarations -> local_declarations local_declaration . SEMICOLON

    SEMICOLON       shift and go to state 17


state 10

    (18) body -> BEGIN . optionalStatements END
    (20) optionalStatements -> .
    (21) optionalStatements -> . statementList
    (24) statementList -> . statement
    (25) statementList -> . statementList SEMICOLON statement
    (28) statement -> . variable ASSIGN expression
    (29) statement -> . PRINT OPEN_PAREN string CLOSE_PAREN
    (30) statement -> . PRINT OPEN_PAREN ID CLOSE_PAREN
    (31) statement -> . READ OPEN_PAREN string CLOSE_PAREN
    (32) statement -> . ID OPEN_PAREN expressionListProc CLOSE_PAREN
    (33) statement -> . body
    (34) statement -> . IF expression THEN bodyWBC
    (35) statement -> . WHILE expression DO statement
    (41) variable -> . ID
    (18) body -> . BEGIN optionalStatements END

    END             reduce using rule 20 (optionalStatements -> .)
    PRINT           shift and go to state 22
    READ            shift and go to state 24
    ID              shift and go to state 23
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    BEGIN           shift and go to state 10

    optionalStatements             shift and go to state 18
    statementList                  shift and go to state 19
    statement                      shift and go to state 20
    variable                       shift and go to state 21
    body                           shift and go to state 25

state 11

    (11) local_declaration -> subHead . declarations body
    (2) declarations -> .
    (3) declarations -> . declarations VAR identList COLON type

    VAR             reduce using rule 2 (declarations -> .)
    BEGIN           reduce using rule 2 (declarations -> .)

    declarations                   shift and go to state 28

state 12

    (12) subHead -> FUNC . ID args RETURN type SEMICOLON

    ID              shift and go to state 29


state 13

    (13) subHead -> PROC . ID args SEMICOLON

    ID              shift and go to state 30


state 14

    (3) declarations -> declarations VAR identList . COLON type
    (5) identList -> identList . COMMA ID

    COLON           shift and go to state 31
    COMMA           shift and go to state 32


state 15

    (4) identList -> ID .

    COLON           reduce using rule 4 (identList -> ID .)
    COMMA           reduce using rule 4 (identList -> ID .)


state 16

    (1) program -> PROGRAM ID SEMICOLON declarations local_declarations body DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declarations local_declarations body DOT .)


state 17

    (10) local_declarations -> local_declarations local_declaration SEMICOLON .

    BEGIN           reduce using rule 10 (local_declarations -> local_declarations local_declaration SEMICOLON .)
    FUNC            reduce using rule 10 (local_declarations -> local_declarations local_declaration SEMICOLON .)
    PROC            reduce using rule 10 (local_declarations -> local_declarations local_declaration SEMICOLON .)


state 18

    (18) body -> BEGIN optionalStatements . END

    END             shift and go to state 33


state 19

    (21) optionalStatements -> statementList .
    (25) statementList -> statementList . SEMICOLON statement

    END             reduce using rule 21 (optionalStatements -> statementList .)
    SEMICOLON       shift and go to state 34


state 20

    (24) statementList -> statement .

    SEMICOLON       reduce using rule 24 (statementList -> statement .)
    END             reduce using rule 24 (statementList -> statement .)


state 21

    (28) statement -> variable . ASSIGN expression

    ASSIGN          shift and go to state 35


state 22

    (29) statement -> PRINT . OPEN_PAREN string CLOSE_PAREN
    (30) statement -> PRINT . OPEN_PAREN ID CLOSE_PAREN

    OPEN_PAREN      shift and go to state 36


state 23

    (32) statement -> ID . OPEN_PAREN expressionListProc CLOSE_PAREN
    (41) variable -> ID .

    OPEN_PAREN      shift and go to state 37
    ASSIGN          reduce using rule 41 (variable -> ID .)


state 24

    (31) statement -> READ . OPEN_PAREN string CLOSE_PAREN

    OPEN_PAREN      shift and go to state 38


state 25

    (33) statement -> body .

    SEMICOLON       reduce using rule 33 (statement -> body .)
    END             reduce using rule 33 (statement -> body .)


state 26

    (34) statement -> IF . expression THEN bodyWBC
    (46) expression -> . simpleExpression
    (47) expression -> . simpleExpression COMPARE simpleExpression
    (48) expression -> . simpleExpression EQUAL simpleExpression
    (49) expression -> . simpleExpression AND simpleExpression
    (50) expression -> . simpleExpression OR simpleExpression
    (51) simpleExpression -> . term
    (52) simpleExpression -> . sign term
    (53) simpleExpression -> . simpleExpression PLUSMINUS term
    (54) term -> . factor
    (55) term -> . term MULTIPLE factor
    (56) term -> . term DIV factor
    (57) term -> . term MOD factor
    (58) term -> . term DIVIDE factor
    (65) sign -> . PLUSMINUS
    (59) factor -> . ID
    (60) factor -> . ID OPEN_PAREN expressionList CLOSE_PAREN
    (61) factor -> . INT_DIGIT
    (62) factor -> . REAL_DIGIT
    (63) factor -> . OPEN_PAREN expression CLOSE_PAREN
    (64) factor -> . NOT factor

    PLUSMINUS       shift and go to state 43
    ID              shift and go to state 45
    INT_DIGIT       shift and go to state 47
    REAL_DIGIT      shift and go to state 48
    OPEN_PAREN      shift and go to state 46
    NOT             shift and go to state 49

    expression                     shift and go to state 39
    simpleExpression               shift and go to state 40
    term                           shift and go to state 41
    sign                           shift and go to state 42
    factor                         shift and go to state 44

state 27

    (35) statement -> WHILE . expression DO statement
    (46) expression -> . simpleExpression
    (47) expression -> . simpleExpression COMPARE simpleExpression
    (48) expression -> . simpleExpression EQUAL simpleExpression
    (49) expression -> . simpleExpression AND simpleExpression
    (50) expression -> . simpleExpression OR simpleExpression
    (51) simpleExpression -> . term
    (52) simpleExpression -> . sign term
    (53) simpleExpression -> . simpleExpression PLUSMINUS term
    (54) term -> . factor
    (55) term -> . term MULTIPLE factor
    (56) term -> . term DIV factor
    (57) term -> . term MOD factor
    (58) term -> . term DIVIDE factor
    (65) sign -> . PLUSMINUS
    (59) factor -> . ID
    (60) factor -> . ID OPEN_PAREN expressionList CLOSE_PAREN
    (61) factor -> . INT_DIGIT
    (62) factor -> . REAL_DIGIT
    (63) factor -> . OPEN_PAREN expression CLOSE_PAREN
    (64) factor -> . NOT factor

    PLUSMINUS       shift and go to state 43
    ID              shift and go to state 45
    INT_DIGIT       shift and go to state 47
    REAL_DIGIT      shift and go to state 48
    OPEN_PAREN      shift and go to state 46
    NOT             shift and go to state 49

    expression                     shift and go to state 50
    simpleExpression               shift and go to state 40
    term                           shift and go to state 41
    sign                           shift and go to state 42
    factor                         shift and go to state 44

state 28

    (11) local_declaration -> subHead declarations . body
    (3) declarations -> declarations . VAR identList COLON type
    (18) body -> . BEGIN optionalStatements END

    VAR             shift and go to state 7
    BEGIN           shift and go to state 10

    body                           shift and go to state 51

state 29

    (12) subHead -> FUNC ID . args RETURN type SEMICOLON
    (14) args -> .
    (15) args -> . OPEN_PAREN paramList CLOSE_PAREN

    RETURN          reduce using rule 14 (args -> .)
    OPEN_PAREN      shift and go to state 53

    args                           shift and go to state 52

state 30

    (13) subHead -> PROC ID . args SEMICOLON
    (14) args -> .
    (15) args -> . OPEN_PAREN paramList CLOSE_PAREN

    SEMICOLON       reduce using rule 14 (args -> .)
    OPEN_PAREN      shift and go to state 53

    args                           shift and go to state 54

state 31

    (3) declarations -> declarations VAR identList COLON . type
    (6) type -> . INT
    (7) type -> . REAL
    (8) type -> . STRI

    INT             shift and go to state 56
    REAL            shift and go to state 57
    STRI            shift and go to state 58

    type                           shift and go to state 55

state 32

    (5) identList -> identList COMMA . ID

    ID              shift and go to state 59


state 33

    (18) body -> BEGIN optionalStatements END .

    DOT             reduce using rule 18 (body -> BEGIN optionalStatements END .)
    SEMICOLON       reduce using rule 18 (body -> BEGIN optionalStatements END .)
    END             reduce using rule 18 (body -> BEGIN optionalStatements END .)


state 34

    (25) statementList -> statementList SEMICOLON . statement
    (28) statement -> . variable ASSIGN expression
    (29) statement -> . PRINT OPEN_PAREN string CLOSE_PAREN
    (30) statement -> . PRINT OPEN_PAREN ID CLOSE_PAREN
    (31) statement -> . READ OPEN_PAREN string CLOSE_PAREN
    (32) statement -> . ID OPEN_PAREN expressionListProc CLOSE_PAREN
    (33) statement -> . body
    (34) statement -> . IF expression THEN bodyWBC
    (35) statement -> . WHILE expression DO statement
    (41) variable -> . ID
    (18) body -> . BEGIN optionalStatements END

    PRINT           shift and go to state 22
    READ            shift and go to state 24
    ID              shift and go to state 23
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    BEGIN           shift and go to state 10

    statement                      shift and go to state 60
    variable                       shift and go to state 21
    body                           shift and go to state 25

state 35

    (28) statement -> variable ASSIGN . expression
    (46) expression -> . simpleExpression
    (47) expression -> . simpleExpression COMPARE simpleExpression
    (48) expression -> . simpleExpression EQUAL simpleExpression
    (49) expression -> . simpleExpression AND simpleExpression
    (50) expression -> . simpleExpression OR simpleExpression
    (51) simpleExpression -> . term
    (52) simpleExpression -> . sign term
    (53) simpleExpression -> . simpleExpression PLUSMINUS term
    (54) term -> . factor
    (55) term -> . term MULTIPLE factor
    (56) term -> . term DIV factor
    (57) term -> . term MOD factor
    (58) term -> . term DIVIDE factor
    (65) sign -> . PLUSMINUS
    (59) factor -> . ID
    (60) factor -> . ID OPEN_PAREN expressionList CLOSE_PAREN
    (61) factor -> . INT_DIGIT
    (62) factor -> . REAL_DIGIT
    (63) factor -> . OPEN_PAREN expression CLOSE_PAREN
    (64) factor -> . NOT factor

    PLUSMINUS       shift and go to state 43
    ID              shift and go to state 45
    INT_DIGIT       shift and go to state 47
    REAL_DIGIT      shift and go to state 48
    OPEN_PAREN      shift and go to state 46
    NOT             shift and go to state 49

    expression                     shift and go to state 61
    simpleExpression               shift and go to state 40
    term                           shift and go to state 41
    sign                           shift and go to state 42
    factor                         shift and go to state 44

state 36

    (29) statement -> PRINT OPEN_PAREN . string CLOSE_PAREN
    (30) statement -> PRINT OPEN_PAREN . ID CLOSE_PAREN
    (40) string -> . STRING STR STRING

    ID              shift and go to state 63
    STRING          shift and go to state 64

    string                         shift and go to state 62

state 37

    (32) statement -> ID OPEN_PAREN . expressionListProc CLOSE_PAREN
    (42) expressionListProc -> .
    (43) expressionListProc -> . expressionList
    (44) expressionList -> . expression
    (45) expressionList -> . expressionList COMMA expression
    (46) expression -> . simpleExpression
    (47) expression -> . simpleExpression COMPARE simpleExpression
    (48) expression -> . simpleExpression EQUAL simpleExpression
    (49) expression -> . simpleExpression AND simpleExpression
    (50) expression -> . simpleExpression OR simpleExpression
    (51) simpleExpression -> . term
    (52) simpleExpression -> . sign term
    (53) simpleExpression -> . simpleExpression PLUSMINUS term
    (54) term -> . factor
    (55) term -> . term MULTIPLE factor
    (56) term -> . term DIV factor
    (57) term -> . term MOD factor
    (58) term -> . term DIVIDE factor
    (65) sign -> . PLUSMINUS
    (59) factor -> . ID
    (60) factor -> . ID OPEN_PAREN expressionList CLOSE_PAREN
    (61) factor -> . INT_DIGIT
    (62) factor -> . REAL_DIGIT
    (63) factor -> . OPEN_PAREN expression CLOSE_PAREN
    (64) factor -> . NOT factor

    CLOSE_PAREN     reduce using rule 42 (expressionListProc -> .)
    PLUSMINUS       shift and go to state 43
    ID              shift and go to state 45
    INT_DIGIT       shift and go to state 47
    REAL_DIGIT      shift and go to state 48
    OPEN_PAREN      shift and go to state 46
    NOT             shift and go to state 49

    expressionListProc             shift and go to state 65
    expressionList                 shift and go to state 66
    expression                     shift and go to state 67
    simpleExpression               shift and go to state 40
    term                           shift and go to state 41
    sign                           shift and go to state 42
    factor                         shift and go to state 44

state 38

    (31) statement -> READ OPEN_PAREN . string CLOSE_PAREN
    (40) string -> . STRING STR STRING

    STRING          shift and go to state 64

    string                         shift and go to state 68

state 39

    (34) statement -> IF expression . THEN bodyWBC

    THEN            shift and go to state 69


state 40

    (46) expression -> simpleExpression .
    (47) expression -> simpleExpression . COMPARE simpleExpression
    (48) expression -> simpleExpression . EQUAL simpleExpression
    (49) expression -> simpleExpression . AND simpleExpression
    (50) expression -> simpleExpression . OR simpleExpression
    (53) simpleExpression -> simpleExpression . PLUSMINUS term

    THEN            reduce using rule 46 (expression -> simpleExpression .)
    DO              reduce using rule 46 (expression -> simpleExpression .)
    SEMICOLON       reduce using rule 46 (expression -> simpleExpression .)
    END             reduce using rule 46 (expression -> simpleExpression .)
    COMMA           reduce using rule 46 (expression -> simpleExpression .)
    CLOSE_PAREN     reduce using rule 46 (expression -> simpleExpression .)
    COMPARE         shift and go to state 70
    EQUAL           shift and go to state 71
    AND             shift and go to state 72
    OR              shift and go to state 73
    PLUSMINUS       shift and go to state 74


state 41

    (51) simpleExpression -> term .
    (55) term -> term . MULTIPLE factor
    (56) term -> term . DIV factor
    (57) term -> term . MOD factor
    (58) term -> term . DIVIDE factor

    COMPARE         reduce using rule 51 (simpleExpression -> term .)
    EQUAL           reduce using rule 51 (simpleExpression -> term .)
    AND             reduce using rule 51 (simpleExpression -> term .)
    OR              reduce using rule 51 (simpleExpression -> term .)
    PLUSMINUS       reduce using rule 51 (simpleExpression -> term .)
    THEN            reduce using rule 51 (simpleExpression -> term .)
    DO              reduce using rule 51 (simpleExpression -> term .)
    SEMICOLON       reduce using rule 51 (simpleExpression -> term .)
    END             reduce using rule 51 (simpleExpression -> term .)
    COMMA           reduce using rule 51 (simpleExpression -> term .)
    CLOSE_PAREN     reduce using rule 51 (simpleExpression -> term .)
    MULTIPLE        shift and go to state 75
    DIV             shift and go to state 76
    MOD             shift and go to state 77
    DIVIDE          shift and go to state 78


state 42

    (52) simpleExpression -> sign . term
    (54) term -> . factor
    (55) term -> . term MULTIPLE factor
    (56) term -> . term DIV factor
    (57) term -> . term MOD factor
    (58) term -> . term DIVIDE factor
    (59) factor -> . ID
    (60) factor -> . ID OPEN_PAREN expressionList CLOSE_PAREN
    (61) factor -> . INT_DIGIT
    (62) factor -> . REAL_DIGIT
    (63) factor -> . OPEN_PAREN expression CLOSE_PAREN
    (64) factor -> . NOT factor
